# clovars

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  data  pyproject.toml  run_settings.toml  setup.py  view_settings.toml
clovars/: __init__.py  main.py  modularized_main.py
clovars/IO/: __init__.py  colony_loader.py  parameter_validator.py  simulation_loader.py  simulation_writer.py  tree_loader.py  well_loader.py
clovars/_deprecated/: settings.py
clovars/abstract/: __init__.py  cell_node.py  circle.py  memory.py
clovars/app/: __init__.py  assets.py  config.py  forms.py  models.py  wsgi.py
clovars/bio/: __init__.py  cell.py  colony.py  treatment.py  well.py
clovars/default_actors/: default_control.toml  default_control_death.toml  default_control_division.toml  default_run.toml  default_temozolomide.toml  default_temozolomide_death.toml  default_temozolomide_division.toml  default_well.toml
clovars/default_settings/: default_analysis.toml  default_colonies.toml  default_fit.toml  default_view.toml
clovars/frontend/: app.py
clovars/gui/: __init__.py  cellsim_main_window.py  clovars_main_window.py  file_handler.py  gui_utils.py  new_treatment_window.py  params_manager.py
clovars/scientific/: __init__.py  brownian_motion.py  cell_signal.py  curve_estimator.py  curves.py  distribution.py  sctypes.py  utils.py
clovars/simulation/: __init__.py
clovars/utils/: __init__.py  exceptions.py  get_roots.py
dash_app/: app.py  cell_signals.py  colonies_controls.py  colonies_tab.py  components.py  globals_tab.py  run_controls.py  treatment_controls.py  utils.py
dash_app/assets/: main.css
dash_app/classes/: __init__.py
dash_app/components/: __init__.py  collapsable_container.py  numeric_input_group.py  signal_selector.py  treatment_curve_selector.py  treatment_selector.py
dash_app/tabs/: __init__.py  colonies_tab.py  globals_tab.py  treatments_tab.py
dash_app/utils/: __init__.py  cell_signals.py  treatment_curves.py
examples/: README.md  analysis.toml  colonies.toml  fit.toml
scripts/: estimate_best_distribution.py
scripts/CTOR Analysis/: analyse_ctor_variance.py  colonies.toml  merge_tree_branches.py  organize_ctor_gaussian_figures.py  produce_ctor_data.py  produce_ctor_gaussian_data.py  run.toml  view.toml  view_ctor_data.py  view_ctor_gaussian_data.py
scripts/Combined Modes/: analysis.toml  colonies.toml  run_and_analyse.py  run_view_analyse.py
scripts/DB Test/: db_treatments.py  models.py
scripts/Figure 2B/: Fig_2B_colonies_i.toml  Fig_2B_colonies_ii.toml  Fig_2B_run.toml
scripts/Figure 2C/: produce_fig_2C.py
scripts/Figure 2D/: Fig_2D_colonies_tmz.toml  compare_start_and_end.py  produce_fig_2D.py
scripts/Figure S2/: analyse_sister_fate_data.py  compare_start_and_end.py  generate_sister_fate_data.py  show_experimental_distributions.py
settings/: analyse_settings.toml  run_settings.toml  view_settings.toml
tests/: __init__.py  test_settings.py
(+233 files in other folders)
