[tool.poetry]
name = "clovars"
version = "0.2.2"
description = "Clonal Variability Simulation"
license = "MIT"
authors = ["Juliano Faccioni <julianofaccioni@gmail.com>"]
readme = "README.md"
homepage = "http://www.ufrgs.br/labsinal/clovars/"
repository = "https://github.com/jfaccioni/clovars"
documentation = "http://www.ufrgs.br/labsinal/clovars/docs"
keywords = ["Simulation", "Biology", "Single Cells", "Heterogeneity", "Fitness"]
include = ["clovars/default_settings/*"]
exclude = ["tests/*", "scripts/*"]

[tool.poetry.dependencies]
python = "^3.8"
ete3 = "^3.1.2"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
toml = "^0.10.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clovars = 'clovars.main:main'