[tool.poetry]
name = "clovars"
version = "0.2.3"
description = "Clonal Variability Simulation"
license = "MIT"
authors = ["Juliano Faccioni <julianofaccioni@gmail.com>"]
readme = "README.md"
homepage = "http://www.ufrgs.br/labsinal/clovars/"
repository = "https://github.com/jfaccioni/clovars"
documentation = "http://www.ufrgs.br/labsinal/clovars/docs"
keywords = ["Simulation", "Biology", "Single Cells", "Heterogeneity", "Fitness"]
include = ["clovars/default_settings/*"]
exclude = ["tests/*", "scripts/*"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
ete3 = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
toml = "*"
scipy = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]
SQLAlchemy = "*"
Flask = "*"
Flask-SQLAlchemy = "*"
Flask-WTF = "*"
Flask-Bootstrap4 = "*"
python-dotenv = "*"
plotly = "*"
flask-assets = "*"
lesscpy = "*"
cssmin = "*"
jsmin = "*"
dash = "*"
dash-bootstrap-components = "*"
pyqt5 = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clovars = 'clovars.main:main'