[tool.poetry]
name = "clovars"
version = "0.2.3"
description = "Clonal Variability Simulation"
license = "MIT"
authors = ["Juliano Faccioni <julianofaccioni@gmail.com>"]
readme = "README.md"
homepage = "http://www.ufrgs.br/labsinal/clovars/"
repository = "https://github.com/jfaccioni/clovars"
documentation = "http://www.ufrgs.br/labsinal/clovars/docs"
keywords = ["Simulation", "Biology", "Single Cells", "Heterogeneity", "Fitness"]
include = ["clovars/default_settings/*"]
exclude = ["tests/*", "scripts/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ete3 = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
pyside6 = "*"
toml = "*"
scipy = "*"
seaborn = "*"
ipython = "*"
openpyxl = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clovars = 'clovars.main:main'